# agenttrust-protocol

./: README.md
.clawdbot/: ITERATION-3-review.md  autonomous-config.json  improvement-engine.json
decisions/: ITERATION-1-scope.md  ITERATION-2-architecture-decisions.md
iterations/: ITERATION-1-checklist.md  ITERATION-2-architecture.md  ITERATION-3-contracts.md
programs/agenttrust/: Cargo.toml
programs/agenttrust/src/: errors.rs  lib.rs
programs/agenttrust/src/instructions/: claim_task.rs  confirm_task.rs  create_task.rs  dispute_task.rs  increase_stake.rs  mod.rs  register_agent.rs  resolve_dispute.rs  submit_evidence.rs  submit_task.rs  update_reputation.rs
programs/agenttrust/src/state/: agent.rs  dispute.rs  mod.rs  task.rs
